Working edit tools (not saving to DB)

--- a/lib/bower/bower.json
+++ b/lib/bower/bower.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "angular-leaflet-directive": "*"
   },
+  "ignoredDependencies": [
+    "angular", "font-awesome", "leaflet"
+  ],
   "private": true
 }
